Release v1.2.1: Forge 1.20.1 port, network compat, PC UI scale, and teller stability fixes